Fixed handling of macros on GlobalPanel when a client; added debugging to drag/drop code